--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  http: ^1.3.0
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
